Introduce game server template management with periodic sync, API integrations, and new endpoints